src/parser/scilabParser.output
   0  $accept : %entry% $end

   1  program : expressions
   2          | EOL expressions
   3          | expressionLineBreak
   4          |

   5  expressions : recursiveExpression
   6              | recursiveExpression expression
   7              | recursiveExpression expression COMMENT
   8              | expression
   9              | expression COMMENT

  10  recursiveExpression : recursiveExpression expression expressionLineBreak
  11                      | recursiveExpression expression COMMENT expressionLineBreak
  12                      | expression COMMENT expressionLineBreak
  13                      | expression expressionLineBreak

  14  expressionLineBreak : SEMI
  15                      | COMMA
  16                      | EOL
  17                      | expressionLineBreak SEMI
  18                      | expressionLineBreak COMMA
  19                      | expressionLineBreak EOL

  20  expression : functionDeclaration
  21             | functionCall
  22             | variableDeclaration
  23             | ifControl
  24             | selectControl
  25             | forControl
  26             | whileControl
  27             | tryControl
  28             | variable
  29             | implicitFunctionCall
  30             | BREAK
  31             | CONTINUE
  32             | returnControl
  33             | COMMENT

  34  implicitFunctionCall : implicitFunctionCall implicitCallable
  35                       | ID implicitCallable

  36  implicitCallable : ID
  37                   | VARINT
  38                   | NUM
  39                   | VARFLOAT
  40                   | STR
  41                   | DOLLAR
  42                   | BOOLTRUE
  43                   | BOOLFALSE
  44                   | implicitCallable DOT ID

  45  functionCall : simpleFunctionCall
  46               | specificFunctionCall

  47  specificFunctionCall : BOOLTRUE LPAREN functionArgs RPAREN
  48                       | BOOLFALSE LPAREN functionArgs RPAREN

  49  simpleFunctionCall : ID LPAREN functionArgs RPAREN

  50  functionArgs : variable
  51               | functionCall
  52               | variableDeclaration
  53               |
  54               | functionArgs COMMA variable
  55               | functionArgs COMMA functionCall
  56               | functionArgs COMMA variableDeclaration
  57               | functionArgs COMMA

  58  functionDeclaration : FUNCTION ID ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter
  59                      | FUNCTION COMMENT ID COMMENT ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter
  60                      | FUNCTION COMMENT LBRACK functionDeclarationReturns RBRACK COMMENT ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter
  61                      | FUNCTION LBRACK functionDeclarationReturns RBRACK ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter
  62                      | FUNCTION LBRACK RBRACK ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter
  63                      | FUNCTION ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter
  64                      | hiddenFun ID ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter
  65                      | hiddenFun LBRACK functionDeclarationReturns RBRACK ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter
  66                      | hiddenFun LBRACK RBRACK ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter
  67                      | hiddenFun ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter

  68  functionDelimiter : END
  69                    | ENDFUNCTION

  70  hiddenFun : HIDDENFUNCTION
  71            | HIDDEN FUNCTION

  72  functionDeclarationReturns : idList

  73  functionDeclarationArguments : LPAREN idList RPAREN
  74                               | LPAREN RPAREN
  75                               |

  76  idList : idList COMMA ID
  77         | ID

  78  functionDeclarationBreak : lineEnd
  79                           | SEMI
  80                           | SEMI EOL
  81                           | COMMA
  82                           | COMMA EOL
  83                           | COMMA COMMA

  84  functionBody : expressions
  85               |

  86  condition : functionCall
  87            | variable

  88  comparison : variable AND variable
  89             | variable AND functionCall
  90             | functionCall AND variable
  91             | functionCall AND functionCall
  92             | variable OR variable
  93             | variable OR functionCall
  94             | functionCall OR variable
  95             | functionCall OR functionCall
  96             | variable EQ variable
  97             | variable EQ functionCall
  98             | functionCall EQ variable
  99             | functionCall EQ functionCall
 100             | variable NE variable
 101             | variable NE functionCall
 102             | functionCall NE variable
 103             | functionCall NE functionCall
 104             | variable LT variable
 105             | variable LT functionCall
 106             | functionCall LT variable
 107             | functionCall LT functionCall
 108             | variable GT variable
 109             | variable GT functionCall
 110             | functionCall GT variable
 111             | functionCall GT functionCall
 112             | variable LE variable
 113             | variable LE functionCall
 114             | functionCall LE variable
 115             | functionCall LE functionCall
 116             | variable GE variable
 117             | variable GE functionCall
 118             | functionCall GE variable
 119             | functionCall GE functionCall

 120  operation : variable PLUS variable
 121            | variable PLUS functionCall
 122            | functionCall PLUS variable
 123            | functionCall PLUS functionCall
 124            | variable MINUS variable
 125            | variable MINUS functionCall
 126            | functionCall MINUS variable
 127            | functionCall MINUS functionCall
 128            | variable TIMES variable
 129            | variable TIMES functionCall
 130            | functionCall TIMES variable
 131            | functionCall TIMES functionCall
 132            | variable DOTTIMES variable
 133            | variable DOTTIMES functionCall
 134            | functionCall DOTTIMES variable
 135            | functionCall DOTTIMES functionCall
 136            | variable KRONTIMES variable
 137            | variable KRONTIMES functionCall
 138            | functionCall KRONTIMES variable
 139            | functionCall KRONTIMES functionCall
 140            | variable CONTROLTIMES variable
 141            | variable CONTROLTIMES functionCall
 142            | functionCall CONTROLTIMES variable
 143            | functionCall CONTROLTIMES functionCall
 144            | variable RDIVIDE variable
 145            | variable RDIVIDE functionCall
 146            | functionCall RDIVIDE variable
 147            | functionCall RDIVIDE functionCall
 148            | variable DOTRDIVIDE variable
 149            | variable DOTRDIVIDE functionCall
 150            | functionCall DOTRDIVIDE variable
 151            | functionCall DOTRDIVIDE functionCall
 152            | variable KRONRDIVIDE variable
 153            | variable KRONRDIVIDE functionCall
 154            | functionCall KRONRDIVIDE variable
 155            | functionCall KRONRDIVIDE functionCall
 156            | variable CONTROLRDIVIDE variable
 157            | variable CONTROLRDIVIDE functionCall
 158            | functionCall CONTROLRDIVIDE variable
 159            | functionCall CONTROLRDIVIDE functionCall
 160            | variable LDIVIDE variable
 161            | variable LDIVIDE functionCall
 162            | functionCall LDIVIDE variable
 163            | functionCall LDIVIDE functionCall
 164            | variable DOTLDIVIDE variable
 165            | variable DOTLDIVIDE functionCall
 166            | functionCall DOTLDIVIDE variable
 167            | functionCall DOTLDIVIDE functionCall
 168            | variable KRONLDIVIDE variable
 169            | variable KRONLDIVIDE functionCall
 170            | functionCall KRONLDIVIDE variable
 171            | functionCall KRONLDIVIDE functionCall
 172            | variable CONTROLLDIVIDE variable
 173            | variable CONTROLLDIVIDE functionCall
 174            | functionCall CONTROLLDIVIDE variable
 175            | functionCall CONTROLLDIVIDE functionCall
 176            | variable POWER variable
 177            | variable POWER functionCall
 178            | functionCall POWER variable
 179            | functionCall POWER functionCall
 180            | variable DOTPOWER variable
 181            | variable DOTPOWER functionCall
 182            | functionCall DOTPOWER variable
 183            | functionCall DOTPOWER functionCall
 184            | MINUS variable
 185            | MINUS functionCall
 186            | PLUS variable
 187            | PLUS functionCall
 188            | variable QUOTE
 189            | functionCall QUOTE
 190            | variable DOTQUOTE
 191            | functionCall DOTQUOTE

 192  listableBegin : COLON variable
 193                | COLON functionCall

 194  listableEnd : listableBegin COLON variable
 195              | listableBegin COLON functionCall
 196              | listableBegin

 197  variable : NOT variable
 198           | NOT functionCall
 199           | variable DOT ID
 200           | variable DOT keywords
 201           | variable DOT functionCall
 202           | functionCall DOT variable
 203           | functionCall DOT keywords
 204           | functionCall DOT functionCall
 205           | variable listableEnd
 206           | functionCall listableEnd
 207           | matrix
 208           | cell
 209           | operation
 210           | ID
 211           | VARINT
 212           | NUM
 213           | STR
 214           | DOLLAR
 215           | COLON
 216           | BOOLTRUE
 217           | BOOLFALSE
 218           | LPAREN variable RPAREN
 219           | LPAREN variableFields RPAREN
 220           | comparison
 221           | variable LPAREN functionArgs RPAREN
 222           | functionCall LPAREN functionArgs RPAREN

 223  variableField : variable
 224                | functionCall

 225  variableFields : variableField COMMA variableFields
 226                 |

 227  ifControl : IF condition thenTok thenBody END
 228            | IF condition thenTok thenBody elseTok elseBody END
 229            | IF condition thenTok thenBody elseIfControl END

 230  thenBody :
 231           | expressions

 232  elseBody :
 233           | expressions

 234  ifConditionBreak : SEMI
 235                   | SEMI EOL
 236                   | COMMA
 237                   | COMMA EOL
 238                   | EOL

 239  thenTok : THEN
 240          | ifConditionBreak THEN
 241          | ifConditionBreak THEN EOL
 242          | THEN ifConditionBreak
 243          | ifConditionBreak
 244          |

 245  elseTok : ELSE
 246          | ELSE COMMA
 247          | ELSE SEMI
 248          | ELSE EOL
 249          | ELSE COMMA EOL
 250          | ELSE SEMI EOL

 251  elseIfControl : ELSEIF condition thenTok thenBody
 252                | ELSEIF condition thenTok thenBody elseTok elseBody
 253                | ELSEIF condition thenTok thenBody elseIfControl

 254  selectControl : select selectable selectConditionBreak casesControl END
 255                | select selectable selectConditionBreak casesControl defaultCase elseBody END
 256                | select selectable COMMENT selectConditionBreak casesControl END
 257                | select selectable COMMENT selectConditionBreak casesControl defaultCase elseBody END

 258  select : SELECT
 259         | SWITCH

 260  defaultCase : elseTok
 261              | OTHERWISE
 262              | OTHERWISE COMMA
 263              | OTHERWISE SEMI
 264              | OTHERWISE EOL
 265              | OTHERWISE COMMA EOL
 266              | OTHERWISE SEMI EOL

 267  selectable : variable
 268             | functionCall

 269  selectConditionBreak : EOL
 270                       | COMMA
 271                       | SEMI
 272                       | COMMA EOL
 273                       | SEMI EOL

 274  casesControl : CASE variable caseControlBreak caseBody
 275               | CASE functionCall caseControlBreak caseBody
 276               | comments CASE variable caseControlBreak caseBody
 277               | comments CASE functionCall caseControlBreak caseBody
 278               | casesControl CASE variable caseControlBreak caseBody
 279               | casesControl CASE functionCall caseControlBreak caseBody

 280  caseBody : expressions
 281           |

 282  caseControlBreak : THEN
 283                   | COMMA
 284                   | SEMI
 285                   | EOL
 286                   | THEN EOL
 287                   | COMMA EOL
 288                   | SEMI EOL
 289                   | THEN COMMA
 290                   | THEN COMMA EOL
 291                   | THEN SEMI
 292                   | THEN SEMI EOL
 293                   |

 294  forControl : FOR ID ASSIGN forIterator forConditionBreak forBody END
 295             | FOR LPAREN ID ASSIGN forIterator RPAREN forConditionBreak forBody END

 296  forIterator : functionCall
 297              | variable

 298  forConditionBreak : EOL
 299                    | SEMI
 300                    | SEMI EOL
 301                    | COMMA
 302                    | COMMA EOL
 303                    | DO
 304                    | DO EOL
 305                    |

 306  forBody : expressions
 307          |

 308  whileControl : WHILE condition whileConditionBreak whileBody END
 309               | WHILE condition whileConditionBreak whileBody elseTok elseWhileBody END

 310  whileBody :
 311            | expressions

 312  elseWhileBody :
 313                | expressions

 314  whileConditionBreak : COMMA
 315                      | SEMI
 316                      | DO
 317                      | DO COMMA
 318                      | DO SEMI
 319                      | THEN
 320                      | THEN COMMA
 321                      | THEN SEMI
 322                      | COMMENT EOL
 323                      | EOL
 324                      | COMMA EOL
 325                      | SEMI EOL
 326                      | DO EOL
 327                      | DO COMMA EOL
 328                      | DO SEMI EOL
 329                      | THEN EOL
 330                      | THEN COMMA EOL
 331                      | THEN SEMI EOL

 332  tryControl : tryTok catchBody catchTok catchBody END
 333             | tryTok catchBody END

 334  tryTok : TRY
 335         | TRY SEMI
 336         | TRY COMMA
 337         | TRY EOL
 338         | TRY SEMI EOL
 339         | TRY COMMA EOL

 340  catchTok : CATCH
 341           | CATCH SEMI
 342           | CATCH COMMA
 343           | CATCH EOL
 344           | CATCH SEMI EOL
 345           | CATCH COMMA EOL

 346  catchBody : expressions
 347            |

 348  returnControl : RETURN
 349                | RETURN variable

 350  cell : LBRACE matrixOrCellLines RBRACE
 351       | LBRACE matrixOrCellLines matrixOrCellColumns RBRACE
 352       | LBRACE EOL matrixOrCellLines matrixOrCellColumns RBRACE
 353       | LBRACE EOL matrixOrCellLines RBRACE
 354       | LBRACE matrixOrCellColumns RBRACE
 355       | LBRACE EOL matrixOrCellColumns RBRACE
 356       | LBRACE EOL RBRACE
 357       | LBRACE RBRACE

 358  matrix : LBRACK matrixOrCellLines RBRACK
 359         | LBRACK EOL matrixOrCellLines RBRACK
 360         | LBRACK matrixOrCellColumns RBRACK
 361         | LBRACK EOL matrixOrCellColumns RBRACK
 362         | LBRACK matrixOrCellLines matrixOrCellColumns RBRACK
 363         | LBRACK EOL matrixOrCellLines matrixOrCellColumns RBRACK
 364         | LBRACK EOL RBRACK
 365         | LBRACK RBRACK

 366  matrixOrCellLines : matrixOrCellLines matrixOrCellLine
 367                    | matrixOrCellLine

 368  matrixOrCellLineBreak : SEMI
 369                        | EOL
 370                        | matrixOrCellLineBreak EOL
 371                        | matrixOrCellLineBreak SEMI

 372  matrixOrCellLine : matrixOrCellColumns matrixOrCellLineBreak
 373                   | matrixOrCellColumns matrixOrCellColumnsBreak matrixOrCellLineBreak

 374  matrixOrCellColumns : matrixOrCellColumns matrixOrCellColumnsBreak variable
 375                      | matrixOrCellColumns matrixOrCellColumnsBreak functionCall
 376                      | matrixOrCellColumns variable
 377                      | matrixOrCellColumns functionCall
 378                      | matrixOrCellColumns COMMENT
 379                      | variable
 380                      | functionCall
 381                      | COMMENT

 382  matrixOrCellColumnsBreak : matrixOrCellColumnsBreak COMMA
 383                           | COMMA

 384  variableDeclaration : assignable ASSIGN variable
 385                      | assignable ASSIGN functionCall
 386                      | functionCall ASSIGN variable
 387                      | functionCall ASSIGN functionCall
 388                      | assignable ASSIGN returnControl
 389                      | functionCall ASSIGN returnControl

 390  assignable : variable DOT ID
 391             | variable DOT keywords
 392             | variable DOT functionCall
 393             | functionCall DOT variable
 394             | functionCall DOT keywords
 395             | functionCall DOT functionCall
 396             | ID
 397             | multipleResults
 398             | variable LPAREN functionArgs RPAREN
 399             | functionCall LPAREN functionArgs RPAREN

 400  multipleResults : LBRACK matrixOrCellColumns RBRACK

 401  comments : COMMENT EOL
 402           | comments COMMENT EOL

 403  lineEnd : EOL
 404          | COMMENT EOL

 405  keywords : IF
 406           | THEN
 407           | ELSE
 408           | ELSEIF
 409           | END
 410           | SELECT
 411           | SWITCH
 412           | OTHERWISE
 413           | CASE
 414           | FUNCTION
 415           | ENDFUNCTION
 416           | HIDDENFUNCTION
 417           | HIDDEN
 418           | FOR
 419           | WHILE
 420           | DO
 421           | BREAK
 422           | TRY
 423           | CATCH
 424           | RETURN

 425  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (425)
	program : .  (4)

	LBRACK  shift 3
	LPAREN  shift 4
	LBRACE  shift 5
	DOLLAR  shift 6
	COMMA  shift 7
	EOL  shift 8
	SEMI  shift 9
	IF  shift 10
	WHILE  shift 11
	COLON  shift 12
	ID  shift 13
	FOR  shift 14
	FUNCTION  shift 15
	HIDDEN  shift 16
	HIDDENFUNCTION  shift 17
	PLUS  shift 18
	MINUS  shift 19
	SELECT  shift 20
	SWITCH  shift 21
	TRY  shift 22
	RETURN  shift 23
	BREAK  shift 24
	CONTINUE  shift 25
	BOOLTRUE  shift 26
	BOOLFALSE  shift 27
	NOT  shift 28
	VARINT  shift 29
	NUM  shift 30
	COMMENT  shift 31
	STR  shift 32
	$end  reduce 4

	program  goto 33
	expressions  goto 34
	expressionLineBreak  goto 35
	recursiveExpression  goto 36
	expression  goto 37
	functionDeclaration  goto 38
	functionCall  goto 39
	variableDeclaration  goto 40
	ifControl  goto 41
	selectControl  goto 42
	forControl  goto 43
	whileControl  goto 44
	tryControl  goto 45
	variable  goto 46
	implicitFunctionCall  goto 47
	returnControl  goto 48
	simpleFunctionCall  goto 49
	specificFunctionCall  goto 50
	hiddenFun  goto 51
	comparison  goto 52
	operation  goto 53
	matrix  goto 54
	cell  goto 55
	select  goto 56
	tryTok  goto 57
	assignable  goto 58
	multipleResults  goto 59


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	matrix : LBRACK . matrixOrCellLines RBRACK  (358)
	matrix : LBRACK . EOL matrixOrCellLines RBRACK  (359)
	matrix : LBRACK . matrixOrCellColumns RBRACK  (360)
	matrix : LBRACK . EOL matrixOrCellColumns RBRACK  (361)
	matrix : LBRACK . matrixOrCellLines matrixOrCellColumns RBRACK  (362)
	matrix : LBRACK . EOL matrixOrCellLines matrixOrCellColumns RBRACK  (363)
	matrix : LBRACK . EOL RBRACK  (364)
	matrix : LBRACK . RBRACK  (365)
	multipleResults : LBRACK . matrixOrCellColumns RBRACK  (400)

	LBRACK  shift 60
	RBRACK  shift 61
	LPAREN  shift 4
	LBRACE  shift 5
	DOLLAR  shift 6
	EOL  shift 62
	COLON  shift 12
	ID  shift 63
	PLUS  shift 18
	MINUS  shift 19
	BOOLTRUE  shift 26
	BOOLFALSE  shift 27
	NOT  shift 28
	VARINT  shift 29
	NUM  shift 30
	COMMENT  shift 64
	STR  shift 32
	.  error

	functionCall  goto 65
	variable  goto 66
	simpleFunctionCall  goto 49
	specificFunctionCall  goto 50
	comparison  goto 52
	operation  goto 53
	matrix  goto 54
	cell  goto 55
	matrixOrCellLines  goto 67
	matrixOrCellColumns  goto 68
	matrixOrCellLine  goto 69


state 4
	variable : LPAREN . variable RPAREN  (218)
	variable : LPAREN . variableFields RPAREN  (219)
	variableFields : .  (226)

	LBRACK  shift 60
	LPAREN  shift 4
	LBRACE  shift 5
	DOLLAR  shift 6
	COLON  shift 12
	ID  shift 63
	PLUS  shift 18
	MINUS  shift 19
	BOOLTRUE  shift 26
	BOOLFALSE  shift 27
	NOT  shift 28
	VARINT  shift 29
	NUM  shift 30
	STR  shift 32
	RPAREN  reduce 226

	functionCall  goto 70
	variable  goto 71
	simpleFunctionCall  goto 49
	specificFunctionCall  goto 50
	comparison  goto 52
	operation  goto 53
	matrix  goto 54
	cell  goto 55
	variableFields  goto 72
	variableField  goto 73


state 5
	cell : LBRACE . matrixOrCellLines RBRACE  (350)
	cell : LBRACE . matrixOrCellLines matrixOrCellColumns RBRACE  (351)
	cell : LBRACE . EOL matrixOrCellLines matrixOrCellColumns RBRACE  (352)
	cell : LBRACE . EOL matrixOrCellLines RBRACE  (353)
	cell : LBRACE . matrixOrCellColumns RBRACE  (354)
	cell : LBRACE . EOL matrixOrCellColumns RBRACE  (355)
	cell : LBRACE . EOL RBRACE  (356)
	cell : LBRACE . RBRACE  (357)

	LBRACK  shift 60
	LPAREN  shift 4
	LBRACE  shift 5
	RBRACE  shift 74
	DOLLAR  shift 6
	EOL  shift 75
	COLON  shift 12
	ID  shift 63
	PLUS  shift 18
	MINUS  shift 19
	BOOLTRUE  shift 26
	BOOLFALSE  shift 27
	NOT  shift 28
	VARINT  shift 29
	NUM  shift 30
	COMMENT  shift 64
	STR  shift 32
	.  error

	functionCall  goto 65
	variable  goto 66
	simpleFunctionCall  goto 49
	specificFunctionCall  goto 50
	comparison  goto 52
	operation  goto 53
	matrix  goto 54
	cell  goto 55
	matrixOrCellLines  goto 76
	matrixOrCellColumns  goto 77
	matrixOrCellLine  goto 69


state 6
	variable : DOLLAR .  (214)

	.  reduce 214


state 7
	expressionLineBreak : COMMA .  (15)

	.  reduce 15


state 8
	program : EOL . expressions  (2)
	expressionLineBreak : EOL .  (16)

	LBRACK  shift 3
	LPAREN  shift 4
	LBRACE  shift 5
	DOLLAR  shift 6
	IF  shift 10
	WHILE  shift 11
	COLON  shift 12
	ID  shift 13
	FOR  shift 14
	FUNCTION  shift 15
	HIDDEN  shift 16
	HIDDENFUNCTION  shift 17
	PLUS  shift 18
	MINUS  shift 19
	SELECT  shift 20
	SWITCH  shift 21
	TRY  shift 22
	RETURN  shift 23
	BREAK  shift 24
	CONTINUE  shift 25
	BOOLTRUE  shift 26
	BOOLFALSE  shift 27
	NOT  shift 28
	VARINT  shift 29
	NUM  shift 30
	COMMENT  shift 31
	STR  shift 32
	$end  reduce 16
	COMMA  reduce 16
	EOL  reduce 16
	SEMI  reduce 16

	expressions  goto 78
	recursiveExpression  goto 36
	expression  goto 37
	functionDeclaration  goto 38
	functionCall  goto 39
	variableDeclaration  goto 40
	ifControl  goto 41
	selectControl  goto 42
	forControl  goto 43
	whileControl  goto 44
	tryControl  goto 45
	variable  goto 46
	implicitFunctionCall  goto 47
	returnControl  goto 48
	simpleFunctionCall  goto 49
	specificFunctionCall  goto 50
	hiddenFun  goto 51
	comparison  goto 52
	operation  goto 53
	matrix  goto 54
	cell  goto 55
	select  goto 56
	tryTok  goto 57
	assignable  goto 58
	multipleResults  goto 59


state 9
	expressionLineBreak : SEMI .  (14)

	.  reduce 14


state 10
	ifControl : IF . condition thenTok thenBody END  (227)
	ifControl : IF . condition thenTok thenBody elseTok elseBody END  (228)
	ifControl : IF . condition thenTok thenBody elseIfControl END  (229)

	LBRACK  shift 60
	LPAREN  shift 4
	LBRACE  shift 5
	DOLLAR  shift 6
	COLON  shift 12
	ID  shift 63
	PLUS  shift 18
	MINUS  shift 19
	BOOLTRUE  shift 26
	BOOLFALSE  shift 27
	NOT  shift 28
	VARINT  shift 29
	NUM  shift 30
	STR  shift 32
	.  error

	functionCall  goto 79
	variable  goto 80
	simpleFunctionCall  goto 49
	specificFunctionCall  goto 50
	condition  goto 81
	comparison  goto 52
	operation  goto 53
	matrix  goto 54
	cell  goto 55


state 11
	whileControl : WHILE . condition whileConditionBreak whileBody END  (308)
	whileControl : WHILE . condition whileConditionBreak whileBody elseTok elseWhileBody END  (309)

	LBRACK  shift 60
	LPAREN  shift 4
	LBRACE  shift 5
	DOLLAR  shift 6
	COLON  shift 12
	ID  shift 63
	PLUS  shift 18
	MINUS  shift 19
	BOOLTRUE  shift 26
	BOOLFALSE  shift 27
	NOT  shift 28
	VARINT  shift 29
	NUM  shift 30
	STR  shift 32
	.  error

	functionCall  goto 79
	variable  goto 80
	simpleFunctionCall  goto 49
	specificFunctionCall  goto 50
	condition  goto 82
	comparison  goto 52
	operation  goto 53
	matrix  goto 54
	cell  goto 55


state 12
	variable : COLON .  (215)

	.  reduce 215


state 13
	implicitFunctionCall : ID . implicitCallable  (35)
	simpleFunctionCall : ID . LPAREN functionArgs RPAREN  (49)
	variable : ID .  (210)
	assignable : ID .  (396)

	LPAREN  shift 83
	DOLLAR  shift 84
	ID  shift 85
	BOOLTRUE  shift 86
	BOOLFALSE  shift 87
	VARINT  shift 88
	VARFLOAT  shift 89
	NUM  shift 90
	STR  shift 91
	$end  reduce 210
	COMMA  reduce 210
	EOL  reduce 210
	SEMI  reduce 210
	ELSE  reduce 210
	ELSEIF  reduce 210
	END  reduce 210
	COLON  reduce 210
	ASSIGN  reduce 396
	ENDFUNCTION  reduce 210
	PLUS  reduce 210
	MINUS  reduce 210
	RDIVIDE  reduce 210
	LDIVIDE  reduce 210
	TIMES  reduce 210
	POWER  reduce 210
	EQ  reduce 210
	NE  reduce 210
	LT  reduce 210
	GT  reduce 210
	LE  reduce 210
	GE  reduce 210
	OTHERWISE  reduce 210
	CASE  reduce 210
	CATCH  reduce 210
	QUOTE  reduce 210
	AND  reduce 210
	DOT  reduce 210
	DOTQUOTE  reduce 210
	DOTTIMES  reduce 210
	DOTLDIVIDE  reduce 210
	DOTRDIVIDE  reduce 210
	DOTPOWER  reduce 210
	OR  reduce 210
	KRONTIMES  reduce 210
	CONTROLTIMES  reduce 210
	CONTROLLDIVIDE  reduce 210
	CONTROLRDIVIDE  reduce 210
	KRONLDIVIDE  reduce 210
	KRONRDIVIDE  reduce 210
	COMMENT  reduce 210

	implicitCallable  goto 92


state 14
	forControl : FOR . ID ASSIGN forIterator forConditionBreak forBody END  (294)
	forControl : FOR . LPAREN ID ASSIGN forIterator RPAREN forConditionBreak forBody END  (295)

	LPAREN  shift 93
	ID  shift 94
	.  error


state 15
	functionDeclaration : FUNCTION . ID ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter  (58)
	functionDeclaration : FUNCTION . COMMENT ID COMMENT ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter  (59)
	functionDeclaration : FUNCTION . COMMENT LBRACK functionDeclarationReturns RBRACK COMMENT ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter  (60)
	functionDeclaration : FUNCTION . LBRACK functionDeclarationReturns RBRACK ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter  (61)
	functionDeclaration : FUNCTION . LBRACK RBRACK ASSIGN ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter  (62)
	functionDeclaration : FUNCTION . ID functionDeclarationArguments functionDeclarationBreak functionBody functionDelimiter  (63)

	LBRACK  shift 95
	ID  shift 96
	COMMENT  shift 97
	.  error


state 16
	hiddenFun : HIDDEN . FUNCTION  (71)

	FUNCTION  shift 98
	.  error


state 17
	hiddenFun : HIDDENFUNCTION .  (70)

	.  reduce 70


state 18
	operation : PLUS . variable  (186)
	operation : PLUS . functionCall  (187)

	LBRACK  shift 60
	LPAREN  shift 4
	LBRACE  shift 5
	DOLLAR  shift 6
	COLON  shift 12
	ID  shift 63
	PLUS  shift 18
	MINUS  shift 19
	BOOLTRUE  shift 26
	BOOLFALSE  shift 27
	NOT  shift 28
	VARINT  shift 29
	NUM  shift 30
	STR  shift 32
	.  error

	functionCall  goto 99
	variable  goto 100
	simpleFunctionCall  goto 49
	specificFunctionCall  goto 50
	comparison  goto 52
	operation  goto 53
	matrix  goto 54
	cell  goto 55


state 19
	operation : MINUS . variable  (184)
	operation : MINUS . functionCall  (185)

	LBRACK  shift 60
	LPAREN  shift 4
	LBRACE  shift 5
	DOLLAR  shift 6
	COLON  shift 12
	ID  shift 63
	PLUS  shift 18
	MINUS  shift 19
	BOOLTRUE  shift 26
	BOOLFALSE  shift 27
	NOT  shift 28
	VARINT  shift 29
	NUM  shift 30
	STR  shift 32
	.  error

	functionCall  goto 101
	variable  goto 102
	simpleFunctionCall  goto 49
	specificFunctionCall  goto 50
	comparison  goto 52
	operation  goto 53
	matrix  goto 54
	cell  goto 55


state 20
	select : SELECT .  (258)

	.  reduce 258


state 21
	select : SWITCH .  (259)

	.  reduce 259


state 22
	tryTok : TRY .  (334)
	tryTok : TRY . SEMI  (335)
	tryTok : TRY . COMMA  (336)
	tryTok : TRY . EOL  (337)
	tryTok : TRY . SEMI EOL  (338)
	tryTok : TRY . COMMA EOL  (339)

	COMMA  shift 103
	EOL  shift 104
	SEMI  shift 105
	LBRACK  reduce 334
	LPAREN  reduce 334
	LBRACE  reduce 334
	DOLLAR  reduce 334
	IF  reduce 334
	END  reduce 334
	WHILE  reduce 334
	COLON  reduce 334
	ID  reduce 334
	FOR  reduce 334
	FUNCTION  reduce 334
	HIDDEN  reduce 334
	HIDDENFUNCTION  reduce 334
	PLUS  reduce 334
	MINUS  reduce 334
	SELECT  reduce 334
	SWITCH  reduce 334
	TRY  reduce 334
	CATCH  reduce 334
	RETURN  reduce 334
	BREAK  reduce 334
	CONTINUE  reduce 334
	BOOLTRUE  reduce 334
	BOOLFALSE  reduce 334
	NOT  reduce 334
	VARINT  reduce 334
	NUM  reduce 334
	COMMENT  reduce 334
	STR  reduce 334


state 23
	returnControl : RETURN .  (348)
	returnControl : RETURN . variable  (349)

	LBRACK  shift 60
	LPAREN  shift 4
	LBRACE  shift 5
	DOLLAR  shift 6
	COLON  shift 12
	ID  shift 63
	PLUS  shift 18
	MINUS  shift 19
	BOOLTRUE  shift 26
	BOOLFALSE  shift 27
	NOT  shift 28
	VARINT  shift 29
	NUM  shift 30
	STR  shift 32
	$end  reduce 348
	RPAREN  reduce 348
	COMMA  reduce 348
	EOL  reduce 348
	SEMI  reduce 348
	ELSE  reduce 348
	ELSEIF  reduce 348
	END  reduce 348
	ENDFUNCTION  reduce 348
	OTHERWISE  reduce 348
	CASE  reduce 348
	CATCH  reduce 348
	COMMENT  reduce 348

	functionCall  goto 106
	variable  goto 107
	simpleFunctionCall  goto 49
	specificFunctionCall  goto 50
	comparison  goto 52
	operation  goto 53
	matrix  goto 54
	cell  goto 55

